# blackjack-solver-simple

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: hypermarameters.py
src/blackjack_solver_simple/: __init__.py
src/blackjack_solver_simple/agents/: policies.py
src/blackjack_solver_simple/core/: __init__.py  card.py  deck.py  env.py  hand.py  state.py
src/blackjack_solver_simple/core/players/: agent.py  base.py  dealer.py
src/blackjack_solver_simple/ui/: human_cli.py
tests/core/: test_card.py  test_deck.py  test_env.py  test_hand.py
